[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/tagging.gd" type="Script" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.994872 )
colors = PoolColorArray( 0.0901961, 0.0901961, 0.0901961, 1, 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="tagging" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="background_color" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true

[node name="background_image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox" type="HBoxContainer" parent="margin/vbox"]
margin_right = 1910.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="tag_entry" type="LineEdit" parent="margin/vbox/hbox"]
margin_right = 1862.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
placeholder_text = "Type a tag.."

[node name="new_tag" type="Button" parent="margin/vbox/hbox"]
margin_left = 1866.0
margin_right = 1910.0
margin_bottom = 24.0
text = "   +   "

[node name="hsep" type="HSeparator" parent="margin/vbox"]
margin_top = 28.0
margin_right = 1910.0
margin_bottom = 32.0
mouse_filter = 2

[node name="list" type="ItemList" parent="margin/vbox"]
margin_top = 36.0
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 4
custom_constants/hseparation = 4
max_text_lines = 2
max_columns = 100

[node name="hsplit" type="HBoxContainer" parent="margin/vbox"]
visible = false
margin_top = 36.0
margin_right = 1910.0
margin_bottom = 1070.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox1" type="VBoxContainer" parent="margin/vbox/hsplit"]
margin_right = 949.0
margin_bottom = 1034.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="vsep" type="VSeparator" parent="margin/vbox/hsplit"]
margin_left = 953.0
margin_right = 957.0
margin_bottom = 1034.0
mouse_filter = 2

[node name="vbox2" type="VBoxContainer" parent="margin/vbox/hsplit"]
margin_left = 961.0
margin_right = 1910.0
margin_bottom = 1034.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="scroll" type="ScrollContainer" parent="margin/vbox"]
visible = false
margin_top = 40.0
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="grid" type="GridContainer" parent="margin/vbox/scroll"]
margin_right = 1910.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 100

[connection signal="focus_entered" from="margin/vbox/hbox/tag_entry" to="." method="_on_tag_entry_focus_entered"]
[connection signal="text_entered" from="margin/vbox/hbox/tag_entry" to="." method="_on_tag_entry_text_entered"]
[connection signal="button_up" from="margin/vbox/hbox/new_tag" to="." method="_on_new_tag_button_up"]
